# network_aware_autonomy

./: Readme.md
volta_navigation/: CMakeLists.txt  package.xml
volta_navigation/config/: costmap.yaml  costmap_global.yaml  costmap_local.yaml  costmap_local_bkp.yaml
volta_navigation/config_backup/: local_planner.yaml  teb_local_planner_params.yaml
volta_navigation/launch/: navigation.launch
volta_navigation/maps/: artpark_office.pgm  artpark_office.yaml  artpark_office_26_09_22.pgm  artpark_office_26_09_22.yaml  ece_25sept.pgm  ece_25sept.yaml  ece_323.yaml  ece_lab.pgm  ece_lab.yaml  ece_room_v1.pgm  ece_room_v1.yaml  ece_third_floor_final.pgm  ece_third_floor_final.yaml  map_without_weight.pgm  map_without_weight.yaml  mymap.pgm  mymap_323.pgm  mymap_323.yaml  new_ece_lab.pgm  new_ece_lab.yaml  small_warehouse_real.pgm  small_warehouse_real.yaml  srijan_2.pgm  srijan_2.yaml  srijan_3.pgm  srijan_3.yaml  srijan_4.pgm  srijan_4.yaml  srijan_5.pgm  srijan_5.yaml  srijan_final.pgm  srijan_final.yaml  washroom.pgm  washroom.yaml
volta_navigation/scripts/: param.yaml  start_sequence_topics.py
volta_navigation/srv/: Goal.srv
